codex-rs/tui/src/pets/snapshots/codex_tui__pets__bongo__tests__bongo_ascii_frames.snap
---
source: tui/src/pets/bongo_tests.rs
expression: terminal.backend()
---
"    /\___/\    "
"   (= o.o =)   "
"  /|       |\  "
" / |_______| \ "
"╭───●─────●───╮"
"│ · · · · · · │"
"╰─────────────╯"
"               "
"    /\___/\    "
"   (= o.o =)   "
"  /|       |\  "
" / |_______| \ "
"╭─────────●───╮"
"│ · ● · · · · │"
"╰─────────────╯"
"               "
"    /\___/\    "
"   (= o.o =)   "
"  /|       |\  "
" / |_______| \ "
"╭───●─────●───╮"
"│ · · · · · · │"
"╰─────────────╯"
"               "
"    /\___/\    "
"   (= o.o =)   "
"  /|       |\  "
" / ●_______| \ "
"╭─────────●───╮"
"│ · · · · · · │"
"╰─────────────╯"
"               "
"    /\___/\    "
"   (= o.o =)   "
"  ●|       |\  "
" / |_______| \ "
"╭─────────●───╮"
"│ · · · · · · │"
"╰─────────────╯"
"               "
"    /\___/\    "
"   (= o.o =)   "
"  /|       |\  "
" / |_______| \ "
"╭───●─────────╮"
"│ · · · · ● · │"
"╰─────────────╯"
"               "
"    /\___/\    "
"   (= o.o =)   "
"  /|       |\  "
" / |_______| \ "
"╭───●─────●───╮"
"│ · · · · · · │"
"╰─────────────╯"
"               "
"    /\___/\    "
"   (= o.o =)   "
"  /|       |\  "
" / |_______● \ "
"╭───●─────────╮"
"│ · · · · · · │"
"╰─────────────╯"
"               "
"    /\___/\    "
"   (= o.o =)   "
"  /|       |●  "
" / |_______| \ "
"╭───●─────────╮"
"│ · · · · · · │"
"╰─────────────╯"
