codex-rs/tui/src/pets/snapshots/codex_tui__pets__bongo__tests__bongo_right_frame.snap
---
source: tui/src/pets/bongo_tests.rs
expression: terminal.backend()
---
"  /\_/\ ♫"
" ( o.o ) "
" /|   |\ "
"╭╯|___|╰╮"
"╭─╮   ╭●╮"
"╰─╯   ╰─╯"
